[metadata]
name = topbid
version = 0.1.0
author = Thomas Ferreira
author_email = fulura@gmail.com
description = Helper library to store current best bid from crypto exchanges APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tferreira/topbid
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
install_requires =
    request-boost==0.6
    requests==2.28.2
python_requires = >=3.8
[options.extras_require]
dev =
    build==0.10.0
    twine==4.0.2