[metadata]
name = topbid
version = 3.0.1
author = Thomas Ferreira
author_email = fulura@gmail.com
description = Helper library to fetch current best bid/ask from crypto exchanges orderbook APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tferreira/topbid
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
install_requires =
    request-boost==0.7
python_requires = >=3.8
[options.extras_require]
dev =
    black==22.12.0
    build==0.10.0
    pylint==2.15.10
    pytest==7.2.1
    responses==0.22.0
    twine==4.0.2
